# spot_simulation

./: .gitignore  LICENSE  README.md  build_robot.sh  build_simulation.sh  run_simulation.sh
robot_ws/src/rs_control/: CMakeLists.txt  package.xml  setup.py
robot_ws/src/rs_control/launch/: gui_inverse.launch  inverse.launch  stand_mode.launch
robot_ws/src/rs_control/scripts/: SpotKinematics.py  stand_mode_spot.py
robot_ws/src/rs_inverse/: CMakeLists.txt  setup.py
robot_ws/src/rs_inverse/launch/: inverse.launch  stand_mode.launch
robot_ws/src/rs_inverse/scripts/: Bezier.py  LegKinematics.py  stand_mode_spot.py
robot_ws/src/rs_teleop/: CMakeLists.txt  package.xml  setup.py  teleop_rs_keyboard.py
robot_ws/src/rs_teleop/launch/: teleop_spot.launch
robot_ws/src/rs_teleop/scripts/: teleop_rs_keyboard.py
rs_base/: CMakeLists.txt  package.xml  setup.py
rs_base/launch/: quadruped_controller.launch
rs_base/nodes/: quadruped_controller_node.py
rs_base/src/rs_base/: quadruped_controller.py
rs_control/: CMakeLists.txt  package.xml
rs_control/launch/: talker.launch
rs_control/scripts/: talker.py
rs_gazebo/: CMakeLists.txt  package.xml
rs_gazebo/launch/: HQ.launch  robot.launch
rs_gazebo/meshes/ss_hq4/402_bookcase/: 402_bookcase_visual.dae
rs_gazebo/meshes/ss_hq4/402_office_chair/: 402_office_chair_visual.dae
rs_gazebo/meshes/ss_hq4/402_phone/: 402_phone_collision.stl  402_phone_visual.dae
rs_gazebo/meshes/ss_hq4/403_complex_chair/: 403_complex_chair_collision.stl
rs_gazebo/meshes/ss_hq4/403_mini_table/: 403_mini_table_visual.dae
rs_gazebo/meshes/ss_hq4/403_sofa/: 403_sofa_collision.stl  403_sofa_visual.dae
rs_gazebo/meshes/ss_hq4/403_table/: 403_table_collision.stl
rs_gazebo/meshes/ss_hq4/407_kitchen_chair/: 407_kitchen_chair_collision.stl
rs_gazebo/meshes/ss_hq4/407_kitchen_table/: 407_kitchen_table_collision.dae  407_kitchen_table_visual.dae
rs_gazebo/meshes/ss_hq4/413_meeting_chair/: 413_meeting_chair_collision.stl
rs_gazebo/meshes/ss_hq4/413_simple_chair/: 413_simple_chair_collision.dae  413_simple_chair_visual.dae
rs_gazebo/meshes/ss_hq4/413_table/: 413_table_visual.dae
rs_gazebo/meshes/ss_hq4/414_bookcase/: 414_bookcase_visual.dae
rs_gazebo/meshes/ss_hq4/414_double_table/: 414_double_table_collision.stl  414_double_table_visual.dae
rs_gazebo/meshes/ss_hq4/414_quartet_table/: 414_quartet_table_collision.stl  414_quartet_table_visual.dae
rs_gazebo/meshes/ss_hq4/414_wardbrode/: 414_wardbrode_visual.dae
rs_gazebo/meshes/ss_hq4/hall_monitor/: hall_monitor.dae
rs_gazebo/meshes/ss_hq4/hall_table/: hall_table_collision.stl  hall_table_visual.dae
rs_gazebo/models/ss_hq4/402_bookcase/: model.config  model.sdf
rs_gazebo/models/ss_hq4/402_phone/: model.config
rs_gazebo/models/ss_hq4/402_simple_bookcase/: model.config
rs_gazebo/models/ss_hq4/402_table/: model.config  model.sdf
rs_gazebo/models/ss_hq4/403_mini_table/: model.sdf
rs_gazebo/models/ss_hq4/403_sofa/: model.config
rs_gazebo/models/ss_hq4/403_table/: model.config
rs_gazebo/models/ss_hq4/407_coffee_table/: model.sdf
rs_gazebo/models/ss_hq4/407_fridge/: 407_fridge.sdf
rs_gazebo/models/ss_hq4/407_kitchen_chair/: model.sdf
rs_gazebo/models/ss_hq4/407_kitchen_table/: model.config  model.sdf
rs_gazebo/models/ss_hq4/407_monitor/: model.config  model.sdf
rs_gazebo/models/ss_hq4/407_shelves/: model.config
rs_gazebo/models/ss_hq4/413_meeting_chair/: model.sdf
rs_gazebo/models/ss_hq4/413_simple_chair/: model.config  model.sdf
rs_gazebo/models/ss_hq4/413_simple_table/: model.sdf
rs_gazebo/models/ss_hq4/413_table/: model.config
rs_gazebo/models/ss_hq4/414_bookcase/: model.config
rs_gazebo/models/ss_hq4/414_double_table/: model.sdf
rs_gazebo/models/ss_hq4/414_monitor/: model.config
rs_gazebo/models/ss_hq4/hall_monitor/: model.config
rs_gazebo/models/ss_hq4/hall_soft_chair/: model.sdf
rs_gazebo/models/ss_hq4/hall_soft_chair_bordo/: model.config
rs_gazebo/models/ss_hq4/hall_wall_solar_system/: model.config
rs_gazebo/worlds/: ss_hq4.world  ss_hq4and5.world  stairs_only.world
rs_inverse/: CMakeLists.txt  package.xml
rs_inverse/launch/: gui_inverse.launch
rs_inverse/scripts/: Bezier.py  SpotKinematics.py  env_tester.py  gui_spot.py  stand_mode_spot.py
rs_msgs/: CMakeLists.txt  package.xml
rs_msgs/msg/: GaitInput.msg
rs_teleop/: CMakeLists.txt  package.xml
rs_teleop/scripts/: teleop_rs_keyboard.py
simulation_ws/src/rs_gazebo/: CMakeLists.txt  package.xml
simulation_ws/src/rs_gazebo/launch/: HQ.launch  robot.launch  spot_controller.launch
simulation_ws/src/rs_gazebo/meshes/ss_hq4/402_office_chair/: 402_office_chair_collision.dae
simulation_ws/src/rs_gazebo/meshes/ss_hq4/402_simple_bookcase/: 402_simple_bookcase_visual.dae
simulation_ws/src/rs_gazebo/meshes/ss_hq4/402_table/: 402_table_collision.stl  402_table_visual.dae
simulation_ws/src/rs_gazebo/meshes/ss_hq4/403_complex_chair/: 403_complex_chair_visual.dae
simulation_ws/src/rs_gazebo/meshes/ss_hq4/403_mini_table/: 403_mini_table_collision.stl
simulation_ws/src/rs_gazebo/meshes/ss_hq4/403_table/: 403_table_visual.dae
simulation_ws/src/rs_gazebo/meshes/ss_hq4/407_kitchen_chair/: 407_kitchen_chair_visual.dae
simulation_ws/src/rs_gazebo/meshes/ss_hq4/413_commode/: 413_commode_visual.dae
simulation_ws/src/rs_gazebo/meshes/ss_hq4/413_meeting_chair/: 413_meeting_chair_visual.dae
simulation_ws/src/rs_gazebo/meshes/ss_hq4/413_monitor/: 413_monitor_visual.dae
simulation_ws/src/rs_gazebo/meshes/ss_hq4/413_simple_table/: 413_simple_table_collision.stl  413_simple_table_visual.dae
simulation_ws/src/rs_gazebo/meshes/ss_hq4/floor5/: floor_45.dae  (+1 more)
simulation_ws/src/rs_gazebo/worlds/: stairs_only.world
simulation_ws/src/rs_viz/: CMakeLists.txt  package.xml
simulation_ws/src/rs_viz/launch/: view_model.launch
towr/xpp/robots/xpp_spot/: CMakeLists.txt  package.xml
towr/xpp/robots/xpp_spot/launch/: spot.launch  xpp_spot.launch
towr/xpp/robots/xpp_spot/rviz/: xpp_spot.rviz
towr/xpp/robots/xpp_spot/src/: inverse_kinematics_spot4.cc  spotleg_inverse_kinematics.cc
(+76 files in other folders)
