<?xml version="1.0"?>
<package>
  <name>rs_gazebo</name>
  <version>0.0.0</version>
  <description>The rs_gazebo package</description>

  <maintainer email="tboro@softserveinc.com">Taras Borovets</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <run_depend>gazebo_ros</run_depend>
  <run_depend>gazebo_ros_control</run_depend>
<!--  <run_depend>gazebo_ros_bumper_controller</run_depend>-->
  <run_depend>rs_description</run_depend>

    <export>
    <gazebo_ros
        gazebo_plugin_path="${prefix}/lib"
        gazebo_model_path="${prefix}/.." />
    </export>

</package>
