<?xml version="1.0"?>
<package format="2">
  <name>rs_inverse</name>
  <version>0.0.0</version>
  <description>The spot_control package</description>

  <maintainer email="tboro@softserveinc.com">Taras Borovets</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>controller_manager</exec_depend>
  <exec_depend>joint_state_controller</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
</package>
