<?xml version="1.0"?>

<package format="2">
  <name>xpp_spot</name>
  <version>1.0.10</version>
  <description>
    Spot-robot specific functions for visualization in the  XPP Motion Framework.
  </description>
  
  <author>Taras Borovets</author>
  <maintainer email="tboro@softserveinc.com">Taras Borovets</maintainer>
  <license>BSD</license>
  
  <buildtool_depend>catkin</buildtool_depend>
  <depend>xacro</depend>
  <depend>roscpp</depend>
  <depend>xpp_vis</depend>
  <depend>rs_description</depend>
</package>
